feat: Ajustes de integracion
